feat: v7.0.1a - closes #366, installs 7zip from the edge branch to work around a volumes creation bug (see secont to last at https://www.7-zip.org/history.txt for 24.01) - fixed some misplaced strings - better help text - when splitting a file, move it to a temp location to avoid filename clash - fixed the cancel button in telegram file download (#28) HOWEVER the bot will currently panic and may not allow you to create other tasks later on, so... - clears the canceled tasks list every 5min and at each restart

--- a/unzipbot/i18n/lang/en.json
+++ b/unzipbot/i18n/lang/en.json
@@ -28,9 +28,7 @@
     "cancelled_txt": "**{} ✅**",
     "cant_dl_url": "**Sorry, I can't download that URL 😭**",
     "changed_upload_mode_txt": "**Successfully changed the upload mode to** `{}` ✅",
-    "choose_ext_mode": "Select the extraction mode for that {} 👀\n\n{} : **Normal mode**\n🔐 : **Password protected**\n🖼️ : **Change the thumbnail**\n✏ : **Change the thumbnail and rename the file**\n❌ : **Cancel your task**",
     "choose_ext_mode_merge": "Select the extraction mode for that merged file 👀\n\n🗂️ : **Normal mode**\n🔐 : **Password protected**\n❌ : **Cancel your task**",
-    "clean_txt": "**Are sure want to clean your task 🤔**\n\nNote : This action cannot be undone",
     "def_not_an_archive": "This file is NOT an archive 😐\nIf you believe it's an error, send the file to **@EDM115**",
     "del_confirm_thumb_2": "Do you really want to delete your thumbnail ?",
     "deleted_thumb": "**Successfully deleted your thumbnail ✅**",
@@ -51,24 +49,24 @@
     "fatal_error": "Fatal error : incorrect archive format",
     "give_archive": "Give me an archive to extract 😐",
     "give_new_name": "Current file name : `{}`\n\nPlease send the new file name (**--INCLUDE THE FILE EXTENTION !--**)",
-    "help_txt": "**• How to extract 🤔**\n\t**1)** Send the file or link that you want to extract\n\t**2)** Click on extract button (If you sent a link use `🔗` button. If it's a file just use `🗂️` button)\n**• How to change upload mode 🤔**\n\tSend **/mode**\n**Note :**\n\t**1.** If your archive is password protected select `🔐` button\n\t**2.** Please don't send corrupted files ! If you sent one by mistake just send **/clean**\n\t**3.** If your archive have +95 files in it then bot can't show all of extracted files to select from (yet). So in that case if you can't see your file in the buttons just click on `Upload all 📤` button. It will send all extracted files to you !\n**• Got an error ?**\n\tVisit edm115.dev/unzip#help\n**• I wanna have help 🥺**\n\tPM me at **@EDM115** or join the chat **@EDM115_chat**",
+    "help_txt": "**• How to extract 🤔**\n\t\t\t\t**1)** Send the file or link that you want to extract\n\t\t\t\t**2)** Click on extract button (If you sent a link use `🔗` button. If it's a file just use `🗂️` button)\n\n**• How to change upload mode 🤔**\n\t\t\t\tSend **/mode**\n**Note :**\n\t\t\t\t**1.** If your archive is password protected select `🔐` button\n\t\t\t\t**2.** Please don't send corrupted files ! If you sent one by mistake just send **/clean**\n\t\t\t\t**3.** If your archive have +95 files in it then bot can't show all of extracted files to select from (yet). So in that case if you can't see your file in the buttons just click on `Upload all 📤` button. It will send all extracted files to you !\n\n**• Got an error ?**\n\t\t\t\tVisit edm115.dev/unzip#help\n\n**• I wanna have help 🥺**\n\t\t\t\tPM me at **@EDM115** or join the chat **@EDM115_chat**",
     "how_many_uploaded": "`{}` file(s) have been extracted from that archive",
     "invalid_url": "That's not a valid url 💀",
     "its_splitted": "This file is splitted\nUse the **/merge** command",
     "log_txt": "**Extract log 📝**\n\n**User ID :** `{}`\n**File name :** `{}`\n**File size :** `{}`",
+    "maintenance_on": "Maintenance mode is currently **ON**\nTasks can't be processed. Come back later",
     "max_tasks": "Sorry, the bot is currently full 🥺\n\n{} tasks are already running, please wait a few minutes",
     "no_file_left": "There's no file left to upload",
     "no_merge_task": "There's no merge task ongoing\nUse **/merge** to start one",
+    "no_space": "There's no space left on the server 😥",
     "not_an_archive": "That's not an archive 💀",
     "pass_txt": "**Password of the above archive is 🔑**\n\n`{}`",
     "password_protected": "That archive is password protected 😡 **/clean** and retry",
-    "no_space": "There's no space left on the server 😥",
     "pls_send_password": "**Please send me the password 🔑**",
     "process_cancelled": "❌ Process cancelled",
     "process_merge": "Processing an user query…\n\nUser ID : {}\nTask : #Merge\n\nFile : {}",
     "process_msgs": "**Processing {} messages… Please wait**",
     "processing2": "`Processing… ⏳`",
-    "maintenance_on": "Maintenance mode is currently **ON**\nTasks can't be processed. Come back later",
     "processing_task": "**✅ Processing your task… Please wait**",
     "query_parse_err": "Fatal query parsing error 💀\n\nPlease contact @EDM115_chat with details and screenshots",
     "refresh_stats": "Refreshing stats… ♻️",
@@ -100,6 +98,8 @@
     "bc_reply": "Reply to a message to broadcast it 📡",
     "bc_start": "Broadcasting has started, this may take a while 😪\n\nUsers : {}/{}",
     "cancelled": "**Cancelled successfully ✅**",
+    "choose_ext_mode": "Select the extraction mode for that {} 👀\n\n{} : **Normal mode**\n🔐 : **Password protected**\n🖼️ : **Change the thumbnail**\n✏ : **Change the thumbnail and rename the file**\n❌ : **Cancel your task**",
+    "clean_txt": "**Are sure want to clean your task 🤔**\n\nNote : This action cannot be undone",
     "cleaned": "The whole server have been cleaned ✅",
     "commands_list": "Here is the list of the commands you can use (only in private btw) :\n\n**{send any file or URL}** : Prompt the extract dialog\n**/start** : To know if I'm online\n**/help** : Gives a simple help\n**/about** : Know more about me\n**/donate** : Know how you can contribute to this bot\n**/clean** : Remove your files from my server. Also useful if a task failed\n**/mode** : Change your upload mode (either `doc` or `media`)\n**/stats** : Know all the current stats about me\n**/merge** : Merge splitted archives together\n**/done** : After you sent all the splitted archives, use this to merge them\n**/info** : Get full info about a [Message](https://docs.pyrogram.org/api/types/Message) (info returned by Pyrogram)\n**/addthumb** : Upload with a custom thumbnail\n**/delthumb** : Removes your thumbnail\n**/report** : Used by replying to a message, sends it to the bot owner (useful for bug report, or any question)\n**/vip** : __Not available yet__ Know more about the VIP subscription\n**/commands** : This message",
     "deleted_folder": "Deleted {} folder successfully",
@@ -109,7 +109,7 @@
     "erase_tasks": "Deleting {} tasks… Please wait",
     "erase_tasks_success": "Successfully deleted {} tasks ✅",
     "ext_caption": "`{}`\n\nSuccessfully extracted by @unzip_edm115bot 🥰",
-    "help_txt": "**• How to extract 🤔**\n\t**1)** Send the file or link that you want to extract\n\t**2)** Click on extract button (If you sent a link use `🔗` button. If it's a file just use `🗂️` button)\n**• How to change upload mode 🤔**\n\tSend **/mode**\n**Note :**\n\t**1.** If your archive is password protected select `🔐` button\n\t**2.** Please don't send corrupted files ! If you sent one by mistake just send **/clean**\n\t**3.** If your archive have +95 files in it then bot can't show all of extracted files to select from (yet). So in that case if you can't see your file in the buttons just click on `Upload all 📤` button. It will send all extracted files to you !\n**• Got an error ?**\n\tVisit edm115.dev/unzip#help\n**• I wanna have help 🥺**\n\tPM me at **@EDM115** or join the chat **@EDM115_chat**",
+    "help_txt": "**• How to extract 🤔**\n\t\t\t\t**1)** Send the file or link that you want to extract\n\t\t\t\t**2)** Click on extract button (If you sent a link use `🔗` button. If it's a file just use `🗂️` button)\n\n**• How to change upload mode 🤔**\n\t\t\t\tSend **/mode**\n**Note :**\n\t\t\t\t**1.** If your archive is password protected select `🔐` button\n\t\t\t\t**2.** Please don't send corrupted files ! If you sent one by mistake just send **/clean**\n\t\t\t\t**3.** If your archive have +95 files in it then bot can't show all of extracted files to select from (yet). So in that case if you can't see your file in the buttons just click on `Upload all 📤` button. It will send all extracted files to you !\n\n**• Got an error ?**\n\t\t\t\tVisit edm115.dev/unzip#help\n\n**• I wanna have help 🥺**\n\t\t\t\tPM me at **@EDM115** or join the chat **@EDM115_chat**",
     "info": "Send a text (shorter possible) from any user/chat. And you will have infos about it 👀",
     "invalid": "Send a valid archive/URL",
     "log_sent": "Log file sent to {}",
